actually did git ignore right this time

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "memory-lane",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
     "start": "cd server && npm run start",
     "start:dev": "concurrently \"cd server && npm run watch\" \"wait-on tcp:3001 && cd client && npm run dev\"",
