--- a/server/.env.test
+++ b/server/.env.test
@@ -1,2 +1,3 @@
-MONGODB_URI=''
+MONGODB_URI='mongodb://atlas-sql-67721de73744c17d3c446955-smxms.a.query.mongodb.net/CustomPacksDB?ssl=true&authSource=admin'
 JWT_SECRET_KEY=''
+
